--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -323,7 +323,7 @@ img{
         row-gap: 2rem;
     }
     &__img{
-        box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15); 
+        box-shadow: 0px 4px 25px rgb(0, 162, 255); 
         border-radius: .5rem;
         overflow: hidden;
         
