--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -342,6 +342,8 @@ img {
   border-radius: 1.5rem;
 }
 
+
+<!--===== WORK =====-->
 .work__container {
   row-gap: 2rem;
 }
@@ -354,6 +356,7 @@ img {
   width: 100%; /* Ajusta según el diseño */
   max-width: 300px; /* Ajusta el tamaño máximo según tus necesidades */
   height: auto; /* Permite que la altura se adapte según la imagen */
+  margin: 0 auto;
 }
 
 .work__img img {
